# ai-agent-travel-agent

./: .gitignore  README.md  demo_transcript.md  main.py  pyproject.toml
agent/: __init__.py  maui_agent.py  prompt.py
core/: __init__.py  flights.py  hotels.py  models.py  synthesis.py  user_profile.py  weather.py
tools/: __init__.py  mcp_server.py
